//this gives version of proto we are using
syntax = "proto3";

package greet;

message Greeting{
	string first_name = 1;
	string last_name = 2;
}

message GreetingRequest{
	Greeting greeting = 1;
}

message GreetingResponse{
	string result = 1;
}

//This below section is from streaming
message GreetManyTimesRequest{
	Greeting greeting = 1;
}

message GreetManyTimesResponse{
	string result = 1;
}
//This below section is from streaming
message LongGreetRequest{
	Greeting greeting = 1;
}

message LongGreetResponse{
	string result = 1;
}

service GreetingService{
	//the paranthesis is to show that we need to define this later in the server
	//This is for Unary
	rpc Greet(GreetingRequest) returns (GreetingResponse){}

	//This is for streaming
	rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse){}

	//client streaming
	rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse){}
}